--- a/vscode/launch.json
+++ b/vscode/launch.json
@@ -23,6 +23,27 @@
           "ignoreFailures": true
         }
       ]
+    },
+    {
+      "name": "DEBUG COREDUMP",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/${workspaceFolderBasename}",
+      "coreDumpPath": "${workspaceFolder}/core",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
   ]
 }
