--- a/cpp_src/Makefile
+++ b/cpp_src/Makefile
@@ -13,7 +13,6 @@ OBJS = $(SRCS:.cpp=.o)
 CPPFLAGS += -Werror
 
 # FINAL=y
-
 ifeq ($(FINAL), y)
 	LDFLAGS += -s
 	CFLAGS += -DNDEBUG -g0 -O2
@@ -28,7 +27,7 @@ else
 	endif
 endif
 
-.PHONY: all debug clean
+.PHONY: all debug run clean
 all: $(PROGS)
 
 debug:
@@ -39,6 +38,9 @@ debug:
 
 $(PROGS): $(OBJS)
 	$(CC) $^ $(LDLIBS) -o $@ $(LDFLAGS)
+
+run: $(PROGS)
+	@./$(PROGS)
 
 clean:
 	$(RM) $(PROGS) $(OBJS)
