--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -38,7 +38,7 @@ debug:
 	@echo "Compiler-flags:" $(CFLAGS)
 
 $(PROGS): $(OBJS)
-	$(CC) $^ $(LDLIBS) -o $@ $(LDFLAGS)
+	$(CC) $(LDFLAGS) $^ $(LDLIBS) -o $@
 
 run: $(PROGS)
 	@./$(PROGS)
