--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -10,7 +10,8 @@ endif
 
 SRCS = $(wildcard *.c)
 OBJS = $(SRCS:.c=.o)
-CFLAGS += -Werror -std=c99
+CFLAGS += -Werror
+# CFLAGS += -std=c99
 
 # FINAL=y
 ifeq ($(FINAL), y)
@@ -21,6 +22,7 @@ ifeq ($(FINAL), y)
 	CFLAGS += -Wstrict-prototypes -Wmissing-prototypes -Winline
 	CFLAGS += -Wdisabled-optimization -Wfloat-equal -Wall
 else
+	# ASAN=y
 	CFLAGS += -g3 -DDEBUG
 	ifeq ($(ASAN), y)
 		CFLAGS += -fsanitize=address -O1 -fno-omit-frame-pointer
@@ -28,7 +30,7 @@ else
 	endif
 endif
 
-.PHONY: all debug run clean
+.PHONY: all debug run cppcheck indent clean
 all: $(PROGS)
 
 debug:
@@ -42,6 +44,16 @@ $(PROGS): $(OBJS)
 
 run: $(PROGS)
 	@./$(PROGS)
+
+cppcheck:
+	@echo "*** Static code analysis"
+	@find . -name "*.[ch]" | xargs cppcheck \
+		--error-exitcode=1 --verbose --enable=all --suppress=missingIncludeSystem
+
+indent:
+	@echo "*** Formatting code"
+	@find . -name "*.[ch]" | xargs clang-format \
+		-style=file -i -fallback-style=none
 
 clean:
 	$(RM) $(PROGS) $(OBJS)
