--- a/cpp_src/Makefile
+++ b/cpp_src/Makefile
@@ -36,7 +36,8 @@ debug:
 	@echo "Source-files:" $(SRCS)
 	@echo "Object-files:" $(OBJS)
 	@echo "Compiler-flags:" $(CPPFLAGS)
-	@echo "Linker-flags:" $(LDLIBS)
+	@echo "Linker-flags:" $(LDFLAGS)
+	@echo "Linker-libs:" $(LDLIBS)
 
 $(PROGS): $(OBJS)
 	$(CC) $(LDFLAGS) $^ $(LDLIBS) -o $@
