--- a/share/vscode_init/tpl_vscode_make/settings.json
+++ b/share/vscode_init/tpl_vscode_make/settings.json
@@ -4,7 +4,16 @@
       "path": "zsh",
       "args": [
         "-c",
-        "echo '*** Hello Visual Studio Code project'; zsh"
+        "echo '*** Hello Linux Visual Studio Code project'; zsh"
+      ]
+    }
+  },
+  "terminal.integrated.profiles.osx": {
+    "zsh": {
+      "path": "zsh",
+      "args": [
+        "-c",
+        "echo '*** Hello macOS Visual Studio Code project'; zsh"
       ]
     }
   }
