Add valgrind as target

--- a/share/vscode_init/tpl_c_lib_make/Makefile
+++ b/share/vscode_init/tpl_c_lib_make/Makefile
@@ -69,6 +69,16 @@ $(PROGS): $(OBJS) $(LIB_TARGET)
 run: $(PROGS)
 	@LD_LIBRARY_PATH=$(LIB_PATH) ./$(PROGS)
 
+.PHONY: valgrind
+valgrind: $(PROGS)
+	@valgrind \
+		--tool=memcheck \
+		--leak-check=yes \
+		--show-reachable=yes \
+		--num-callers=20 \
+		--track-fds=yes \
+		./$(PROGS)
+
 .PHONY: cppcheck
 cppcheck:
 	@echo "*** Static code analysis"
