--- a/share/vscode_init/tpl_cpp_make/Makefile
+++ b/share/vscode_init/tpl_cpp_make/Makefile
@@ -60,7 +60,7 @@ valgrind: $(PROGS)
 .PHONY: cppcheck
 cppcheck:
 	@echo "*** Static code analysis"
-	@cppcheck $(shell find . -name "*.[ch]") \
+	@cppcheck $(shell find . -name "*.cpp" -o -name "*.h") \
 		--verbose --enable=all -DDEBUG=1 \
 		--suppress=missingIncludeSystem \
 		--suppress=unknownMacro \
@@ -69,7 +69,7 @@ cppcheck:
 .PHONY: indent
 indent:
 	@echo "*** Formatting code"
-	@clang-format $(shell find . -name "*.[ch]") \
+	@clang-format $(shell find . -name "*.cpp" -o -name "*.h") \
 		-style=file -i -fallback-style=none
 
 .PHONY: clean
